Fix visual bug not showing last message due to overlapping divs

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -39,11 +39,11 @@
 
 .chat_window{
   overflow-y: scroll;
-  height : 100%;
+  height : 95%;
 }
 
 .chatForm{
-  position: absolute;
+  position: relative;
   bottom : 0;
   background : blue;
   width : 100%;
